using media queries for video overlay to prevent large font covering up the play button

--- a/wp-content/themes/sho_child/css/single-wod.css
+++ b/wp-content/themes/sho_child/css/single-wod.css
@@ -25,10 +25,32 @@
     color:#fff;
 }
 /*used for writing exercise sets and reps on
- * top of youtube video embeds*/
-.video-overlay-text{
-    margin-top:50px;
-    text-align:center;
-    font-size:50;
-    color:white;
+ * top of youtube video embeds
+ *font size is reduced on smaller breakpoints
+ to avoid obscuring the play button.
+ * */
+
+@media (max-width:768px){
+    .video-overlay-text{
+        margin-top:50px;
+        text-align:center;
+        font-size:20;
+        color:white;
+    }
+}
+@media (max-width:992px){
+    .video-overlay-text{
+        margin-top:50px;
+        text-align:center;
+        font-size:30;
+        color:white;
+    }
+}
+@media (max-width:1200px){
+    .video-overlay-text{
+        margin-top:50px;
+        text-align:center;
+        font-size:50;
+        color:white;
+    }
 }
